src/objects/Celebrity__c.object
<CustomObject>
    <fields>
        <fullName>Handler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who deals with the celebrity&apos;s shenanigans.</description>
        <inlineHelpText>The person who deals with the celebrity&apos;s shenanigans.</inlineHelpText>
        <label>Handler</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Celebrities</relationshipLabel>
        <relationshipName>Celebrities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Miles_Travelled__c</fullName>
        <label># of Miles Travelled</label>
        <summarizedField>Reservation__c.num_of_Miles__c</summarizedField>
        <summaryFilterItems>
            <field>Reservation__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Reservation__c.Celebrity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Reservations__c</fullName>
        <label># of Reservations</label>
        <summaryFilterItems>
            <field>Reservation__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Reservation__c.Celebrity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reward_Level__c</fullName>
        <formula>IF(
     AND(Number_of_Miles_Travelled__c &lt; 100, Number_of_Reservations__c &lt; 1),  
               &quot;Member&quot;, 
     IF(
          AND(Number_of_Miles_Travelled__c &lt;= 1000, Number_of_Reservations__c &lt;= 10),  
                    IMAGE(&quot;/servlet/servlet.ImageServer?id=015d0000000cJSO&amp;oid=00Dd0000000eziQ&quot;, &quot;Bronze&quot;) , 
          IF(
               AND(Number_of_Miles_Travelled__c &lt;= 10000, Number_of_Reservations__c &lt;= 150), 
                         IMAGE(&quot;/servlet/servlet.ImageServer?id=015d0000000cJSJ&amp;oid=00Dd0000000eziQ&quot;, &quot;Silver&quot;), 
               IF(
                   AND(Number_of_Miles_Travelled__c &lt;= 100000, Number_of_Reservations__c &lt;= 200), 
                             IMAGE(&quot;/servlet/servlet.ImageServer?id=015d0000000cJSE&amp;oid=00Dd0000000eziQ&quot;, &quot;Gold&quot;) ,
               null
                    )
               )
          )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frequent Flyer Reward Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iStockPhoto__c</fullName>
        <label>iStockPhoto</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Celebrity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>iStockPhoto__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Celebrity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Celebrities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>